// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate payment for delivery order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4443826473859844,
    "tip": 1.79775,
    "total": 14.727132647385984,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5556173526140155,
    "tip": 2.24775,
    "total": 18.288367352614017,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4443826473859844,
    "tip": 1.79775,
    "total": 14.727132647385984,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5556173526140155,
    "tip": 2.24775,
    "total": 18.288367352614017,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0.4,
    "fries": 2.194,
    "name": undefined,
    "price": 9.99,
    "tax": 0.348512585812357,
    "tip": 1.8276000000000001,
    "total": 14.760112585812358,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 2.2776,
    "total": 18.29592494279176,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 2.194,
    "name": undefined,
    "price": 9.99,
    "tax": 0.348512585812357,
    "tip": 1.8276000000000001,
    "total": 14.760112585812358,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 2.2776,
    "total": 18.29592494279176,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 2.2776,
    "total": 18.29592494279176,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery order with large fries 1`] = `
Array [
  Object {
    "delivery": 0.6666666666666666,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6852109411219285,
    "tip": 1.8475,
    "total": 15.516044274455261,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.6666666666666666,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 12.99,
    "tax": 0.852109411219286,
    "tip": 2.2975,
    "total": 19.13294274455262,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.6666666666666666,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4626796476587853,
    "tip": 1.2474999999999998,
    "total": 10.693512980992118,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery single order no fries 1`] = `
Array [
  Object {
    "delivery": 2,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.4985,
    "total": 15.4885,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery single order with fries 1`] = `
Array [
  Object {
    "delivery": 2,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.947,
    "total": 18.927,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery varying orders 1`] = `
Array [
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5404869251577997,
    "tip": 2.24775,
    "total": 18.2732369251578,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.23408476104598738,
    "tip": 0.9735,
    "total": 8.197584761045988,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5226330027051398,
    "tip": 2.1734999999999998,
    "total": 17.68613300270514,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 17.49,
    "tax": 0.702795311091073,
    "tip": 2.9227499999999997,
    "total": 23.610545311091073,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4443826473859844,
    "tip": 0,
    "total": 12.429382647385983,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5556173526140155,
    "tip": 0,
    "total": 15.540617352614015,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4443826473859844,
    "tip": 0,
    "total": 12.429382647385983,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5556173526140155,
    "tip": 0,
    "total": 15.540617352614015,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.194,
    "name": undefined,
    "price": 9.99,
    "tax": 0.348512585812357,
    "tip": 0,
    "total": 12.532512585812357,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 0,
    "total": 15.618324942791762,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.194,
    "name": undefined,
    "price": 9.99,
    "tax": 0.348512585812357,
    "tip": 0,
    "total": 12.532512585812357,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 0,
    "total": 15.618324942791762,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.194,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43432494279176204,
    "tip": 0,
    "total": 15.618324942791762,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with large fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6852109411219285,
    "tip": 0,
    "total": 13.001877607788595,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 12.99,
    "tax": 0.852109411219286,
    "tip": 0,
    "total": 16.16877607788595,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.3266666666666667,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4626796476587853,
    "tip": 0,
    "total": 8.779346314325451,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup single order no fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 11.99,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup single order with fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 14.98,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup varying orders 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5404869251577997,
    "tip": 0,
    "total": 15.5254869251578,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.23408476104598738,
    "tip": 0,
    "total": 6.7240847610459875,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5226330027051398,
    "tip": 0,
    "total": 15.01263300270514,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 17.49,
    "tax": 0.702795311091073,
    "tip": 0,
    "total": 20.187795311091072,
    "user_id": undefined,
  },
]
`;
